feat: Add nanosecond timings to live availability response